--- a/FFmpegScheduler/FFmpegScheduler.vcxproj
+++ b/FFmpegScheduler/FFmpegScheduler.vcxproj
@@ -161,6 +161,9 @@
     <ClInclude Include="String.h" />
     <ClInclude Include="Unified.h" />
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="CMakeLists.txt" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
