--- a/FFmpegScheduler/FFmpegScheduler.vcxproj.filters
+++ b/FFmpegScheduler/FFmpegScheduler.vcxproj.filters
@@ -54,4 +54,7 @@
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="CMakeLists.txt" />
+  </ItemGroup>
 </Project>
